# whoischeker

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
config/: config.example.yml  config.yml
config/migrations/: 001_remove_users_table.sql  002_add_whois_fields.sql
data/: whoischeker.db
docs/: Diary.md  Project.md  TaskTracker.md  qa.md
src/bot/: main.py
src/cli/: admin.py
src/core/: changes.py  dns_checker.py  scheduler.py  whois_checker.py
src/db/: migrations.py  models.py  service.py
src/utils/: config.py  healthcheck.py  validators.py
